--- a/difbrowser.ini
+++ b/difbrowser.ini
@@ -1,16 +1,16 @@
 [CONFIGS]
 number_of_columns = 10
 number_of_lines = 10
-grid_image_size = 50
+grid_image_size = 75
 preview_image_size = 300
 button_height = 25
 font_name = Tahoma
 font_size = 10
 font_weight = normal
-background_color = black
-main_color = teal
+background_color = #000033
+main_color = Teal
 accent_color_1 = goldenrod
-accent_color_2 = grey70
+accent_color_2 = gray70
 alert_color = dark red
-default_path = D:/Stable Diffusion Auto1111/stable-diffusion-webui/outputs/Test
+default_path = D:\Stable Diffusion Auto1111\stable-diffusion-webui\outputs\Test
 
